--- a/film.html
+++ b/film.html
@@ -13,7 +13,12 @@
 <body>
   <main>
     <h1 id="name">FILM INFO</h1>
-    <section id="film-info">
+    <section id="generalInfo">
+        <div id="crawl"></div>
+        <p>Episode: <span id="episode"></span></p>
+        <p>Director: <span id="director"></span></p>
+        <p>Release Date: <span id="release"></span></p>
+        <p>Producer: <span id="producer"></span></p>
     </section>
     <section id="characters">
       <h2>Characters</h2>
