--- a/planet.html
+++ b/planet.html
@@ -6,19 +6,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="planet.js" defer></script>
-  <title>Star Wars Characters</title>
-  <link rel="stylesheet" href="site.css">
+  <link rel="stylesheet" href="site.css" />
+  <title>A Star Wars Planet</title>
 </head>
 
 <body>
-  <div>
-    <h1>Star Wars Universe Lookup</h1>
-    <label for="searchString">Who you looking for? <span class="small">(Regular expressions are cool
-        here)</span></label>
-    <input id="searchString" oninput="filterCharacters()" autocomplete="off" />
-  </div>
-  <section id="charactersList">
-  </section>
+  <main>
+    <h1 id="name">PLANET INFO</h1>
+    <section id="generalInfo">
+        <p>Climate: <span id="climate"></span></p>
+        <p>Diameter: <span id="diameter"></span></p>
+        <p>Gravity: <span id="gravity"></span></p>
+        <p>Population: <span id="population"></span></p>
+    </section>
+    <section id="characters">
+      <h2>Characters</h2>
+      <ul></ul>
+    </section>
+    <section id="films">
+      <h2>Films</h2>
+      <ul></ul>
+    </section>
+    </section>
+  </main>
 </body>
 
 </html>
